# encodeco

./: Cargo.toml  README.md
src/: common.rs  lib.rs  main.rs
src/codecs/: base64.rs  url.rs
