[package]
name = "encodeco"
version = "0.1.0"
edition = "2021"
authors = ["Francico Millone"]
description = "CLI tool to encode and decode strings"
readme = "README.md"
repository = "https://github.com/fmillone/encodeco"
homepage = "https://github.com/fmillone/encodeco"
license = "MIT or Apache-2.0"
keywords = ["cli", "encode", "decode", "string"]

[dependencies]
base64 = "0.22.1"
clap = "4.5.13"
percent-encoding = "2.3.1"
